# ticketflow-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 202607080001_initial_users.py  202607110002_convert_user_ids_to_uuid.py  202607120001_add_ticketflow_domain.py
app/: __init__.py  main.py
app/api/: router.py
app/api/dependencies/: auth.py  database.py
app/api/routes/: auth.py  health.py  tickets.py  users.py
app/core/: __init__.py  config.py  exceptions.py  security.py
app/database/: __init__.py  base.py  models.py
app/models/: __init__.py  base.py  ticket.py  user.py
app/repositories/: __init__.py  base.py  ticket_repository.py  user_repository.py
app/schemas/: __init__.py  auth.py  common.py  ticket.py  user.py
app/services/: __init__.py  auth_service.py  ticket_service.py  user_service.py
app/utils/: pagination.py
scripts/: create_admin.py  create_project.py  seed.py
tests/: conftest.py
tests/integration/: test_auth.py  test_health.py  test_tickets.py  test_users.py
tests/unit/: test_security.py
